--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,10 @@
 
   <!-- Title and favicon -->
   <title>okbulk</title>
-  <link rel="icon" type="image/png" href="asset/img/favicon-title.png">
+  <link rel="icon" type="image/png" href="asset/img/logo-title.png">
 
   <!-- Styles -->
   <link rel="stylesheet" href="asset/style.css">
-
-  <!-- Scripts -->
-  <script type="text/javascript" src="asset/script.js"></script>
 </head>
 
 <body>
@@ -26,66 +23,79 @@
   <div class="background"></div>
 
   <!-- Content -->
-  <div class="container p-5 bg-white">
-    <h1 class="text-center fw-bold my-5 hello">Contact Us</h1>
-    <div class="row">
+  <div class="container">
 
-      <!-- Left column -->
-      <div class="col-lg-6">
+    <!-- Logo -->
+    <img class="logo" src="asset/img/logo.png" alt="OkBulk Shipping L.L.C">
 
+    <!-- Slogan -->
+    <div class="slogan">Is a place to order and receive your bulk needs <b>anytime</b> and <b>anywhere</b></div>
+
+    <!-- Contact -->
+    <div class="buttons">
+
+      <!-- Email -->
+      <a href="mailto:info@okbulk.com" class="btn btn-lg btn-primary rounded-pill me-2">Send Email</a>
+
+      <!-- Call -->
+      <a href="tel:+971501900741" class="btn btn-lg btn-outline-primary rounded-pill">Call</a>
+    </div>
+
+    <!-- Team -->
+    <h1 class="text-center text-secondary fw-bold mt-5 mb-0">Meet the Team</h1>
+    <hr class="my-5">
+    <div class="team">
+
+      <!-- Esmaeil -->
+      <div>
+        <!-- Profile image -->
+        <img class="image" src="asset/img/user-circle.svg" alt="Esmaeil Ansari">
         <!-- Email -->
-        <div class="pt-5">
-          <div class="title">Email</div>
-          <p><a href="mailto:info@okbulk.com">info@okbulk.com</a></p>
-        </div>
+        <a class="email" href="mailto:esmail.ansari22@yahoo.com">
+          <img src="asset/img/email.svg" alt="esmail.ansari22@yahoo.com">
+        </a>
+        <!-- Name -->
+        <h5>Esmaeil Ansari</h5>
+        <!-- Position -->
+        <p class="text-secondary">Manager</p>
+      </div>
 
-        <!-- Phone number -->
-        <div>
-          <div class="title">Phone number</div>
-          <p><a href="tel:00971501900741">+97150-1900-741</a></p>
-        </div>
+      <!-- Irfan -->
+      <div>
+        <!-- Profile image -->
+        <img class="image" src="asset/img/user-circle.svg" alt="Irfan Rashid">
+        <!-- Email -->
+        <a class="email" href="mailto:irfanrashid.okbulkshipping@gmail.com">
+          <img src="asset/img/email.svg" alt="irfanrashid.okbulkshipping@gmail.com">
+        </a>
+        <!-- Name -->
+        <h5>Irfan Rashid</h5>
+        <!-- Position -->
+        <p class="text-secondary">Technical And Commercial Sales Representative</p>
+      </div>
+    </div>
 
-        <!-- Address -->
+    <!-- Footer -->
+    <div class="footer row">
+
+      <!-- Contact -->
+      <div class="col-lg-6">
+        <p class="footer-header mt-5">Contact</p>
         <div>
-          <div class="title">Address</div>
-          <p>301 - Api World Tower</p>
+          <a href="https://okbulk.com">www.okbulk.com</a>
+        </div>
+        <div>
+          <a href="mailto:info@okbulk.com">info@okbulk.com</a>
+        </div>
+        <div>
+          <a href="tel:+971501900741">+971501900741</a>
         </div>
       </div>
 
-      <!-- Right column -->
+      <!-- Address -->
       <div class="col-lg-6">
-        <div class="pt-5">
-
-          <!-- Email -->
-          <div class="form-floating mb-3">
-            <input name="email" class="form-control" id="email" type="email"
-                   placeholder="Email">
-            <label for="email">Email</label>
-          </div>
-
-          <!-- Subject -->
-          <div class="form-floating mb-3">
-            <input name="subject" class="form-control" id="subject" type="text"
-                   placeholder="Subject">
-            <label for="subject">Subject</label>
-          </div>
-
-          <!-- Message -->
-          <div class="form-floating mb-3">
-            <textarea name="message"
-                      class="form-control"
-                      id="message"
-                      placeholder="Message"></textarea>
-            <label for="message">Message</label>
-          </div>
-
-          <!-- Submit -->
-          <button class="btn w-100 btn-success p-2 fw-bold text-light shadow-sm"
-                  onclick="sendMail()"
-                  type="button">
-            SUBMIT
-          </button>
-        </div>
+        <p class="footer-header mt-5">Address</p>
+        <div>Office No.301 - Api World Tower - Sheikh Zayed Rd - Trade Centre - Trade Centre 1 - Dubai - United Arab Emirates</div>
       </div>
     </div>
   </div>
