--- a/src/index.html
+++ b/src/index.html
@@ -44,33 +44,27 @@
     <!-- Team -->
     <h1 class="text-center text-secondary fw-bold mt-5 mb-0">Meet the Team</h1>
     <hr class="my-5">
-    <div class="team">
+    <div class="team row">
 
-      <!-- Esmaeil -->
-      <div>
-        <!-- Profile image -->
-        <img class="image" src="asset/img/user-circle.svg" alt="Esmaeil Ansari">
-        <!-- Email -->
-        <a class="email" href="mailto:esmail.ansari22@yahoo.com">
-          <img src="asset/img/email.svg" alt="esmail.ansari22@yahoo.com">
-        </a>
-        <!-- Name -->
+      <div class="col-lg-3">
+        <div class="image">
+          <img src="asset/img/user-circle.svg" alt="Esmaeil Ansari">
+          <a class="email" href="mailto:esmail.ansari22@yahoo.com">
+            <img src="asset/img/email.svg" alt="esmail.ansari22@yahoo.com">
+          </a>
+        </div>
         <h5>Esmaeil Ansari</h5>
-        <!-- Position -->
         <p class="text-secondary">Manager</p>
       </div>
 
-      <!-- Irfan -->
-      <div>
-        <!-- Profile image -->
-        <img class="image" src="asset/img/user-circle.svg" alt="Irfan Rashid">
-        <!-- Email -->
-        <a class="email" href="mailto:irfanrashid.okbulkshipping@gmail.com">
-          <img src="asset/img/email.svg" alt="irfanrashid.okbulkshipping@gmail.com">
-        </a>
-        <!-- Name -->
+      <div class="col-lg-3">
+        <div class="image">
+          <img src="asset/img/user-circle.svg" alt="Irfan Rashid">
+          <a class="email" href="mailto:irfanrashid.okbulkshipping@gmail.com">
+            <img src="asset/img/email.svg" alt="irfanrashid.okbulkshipping@gmail.com">
+          </a>
+        </div>
         <h5>Irfan Rashid</h5>
-        <!-- Position -->
         <p class="text-secondary">Technical And Commercial Sales Representative</p>
       </div>
     </div>
