--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,9 @@
         <p class="footer-header mt-5">Address</p>
         <div>Office No.301 - Api World Tower - Sheikh Zayed Rd - Trade Centre - Trade Centre 1 - Dubai - United Arab Emirates</div>
       </div>
+
+      <!-- Copyright -->
+      <div class="col-lg-12 mt-5 text-secondary">2022 &copy; Okbulk Shipping L.L.C</div>
     </div>
   </div>
 </div>
