--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       <div class="col-lg-3">
         <div class="image">
           <img src="asset/img/user-circle.svg" alt="Irfan Rashid">
-          <a class="email" href="mailto:irfanrashid.okbulkshipping@gmail.com">
+          <a class="email" href="mailto:irfanrashid@okbulk.com">
             <img src="asset/img/email.svg" alt="irfanrashid.okbulkshipping@gmail.com">
           </a>
         </div>
