--- a/src/index.html
+++ b/src/index.html
@@ -1,100 +1,304 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html data-bs-theme="light" dir="ltr" lang="en">
 <head>
+  <!-- Meta -->
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="okbulk">
-  <meta name="description" content="OkBulk is a place to order and receive your bulk needs anytime and anywhere.">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
-  <!-- Title and favicon -->
-  <title>okbulk</title>
-  <link rel="icon" type="image/png" href="asset/img/logo-title.png">
+  <!-- SEO -->
+  <title>Okbulk - Anywhere, Anytime</title>
+  <meta
+    content="Okbulk - A trusted shipping company and a place to order and receive your bulk needs across the Region."
+    name="description">
+  <meta
+    content="shipping, cargo, dubai, order, customs, port rashid, port hamriyah, car, bulk, shipment"
+    name="keywords">
+  <meta content="Amerpire" name="author">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="asset/style.css">
+  <!-- Style -->
+  <link href="asset/style.css" rel="stylesheet"/>
+
+  <!-- Theme -->
+  <meta content="#3498db" name="theme-color">
+  <link href="asset/img/logo-title.png" rel="icon" sizes="512x512" type="image/png">
 </head>
-
 <body>
-<div>
 
-  <!-- Background image -->
-  <div class="background"></div>
+<!-- Cover -->
+<section id="cover">
+  <div class="inner">
 
-  <!-- Content -->
-  <div class="container">
-
-    <!-- Logo -->
-    <img class="logo" src="asset/img/logo.png" alt="OkBulk Shipping L.L.C">
-
-    <!-- Slogan -->
-    <div class="slogan">Is a place to order and receive your bulk needs <b>anytime</b> and <b>anywhere</b></div>
-
-    <!-- Contact -->
-    <div class="buttons">
-
-      <!-- Email -->
-      <a href="mailto:info@okbulk.com" class="btn btn-lg btn-primary rounded-pill me-2">Send Email</a>
-
-      <!-- Call -->
-      <a href="tel:+971501900741" class="btn btn-lg btn-outline-primary rounded-pill">Call</a>
-    </div>
-
-    <!-- Team -->
-    <h1 class="text-center text-secondary fw-bold mt-5 mb-0">Meet the Team</h1>
-    <hr class="my-5">
-    <div class="team row">
-
-      <div class="col-lg-3">
-        <div class="image">
-          <img src="asset/img/user-circle.svg" alt="Esmaeil Ansari">
-          <a class="email" href="mailto:esmail.ansari22@yahoo.com">
-            <img src="asset/img/email.svg" alt="esmail.ansari22@yahoo.com">
-          </a>
-        </div>
-        <h5>Esmaeil Ansari</h5>
-        <p class="text-secondary">Manager</p>
+    <!-- Cover -->
+    <div class="row text-center text-md-start">
+      <div class="col-12 col-md-8">
+        <!-- Title -->
+        <img alt="logo" class="cover-logo" src="asset/img/logo.png">
+        <!-- Description -->
+        <p class="section-subtitle mt-3">
+          Okbulk - A trusted shipping company and a place to order and receive your bulk needs across the Region.
+        </p>
+        <!-- Contact Us -->
+        <a class="btn btn-primary btn-lg rounded-pill me-2 px-3" href="#contact">Contact Us</a>
       </div>
-
-      <div class="col-lg-3">
-        <div class="image">
-          <img src="asset/img/user-circle.svg" alt="Irfan Rashid">
-          <a class="email" href="mailto:irfanrashid@okbulk.com">
-            <img src="asset/img/email.svg" alt="irfanrashid.okbulkshipping@gmail.com">
-          </a>
-        </div>
-        <h5>Irfan Rashid</h5>
-        <p class="text-secondary">Technical And Commercial Sales Representative</p>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <div class="footer row">
-
-      <!-- Contact -->
-      <div class="col-lg-6">
-        <p class="footer-header mt-5">Contact</p>
-        <div>
-          <a href="https://okbulk.com">www.okbulk.com</a>
-        </div>
-        <div>
-          <a href="mailto:info@okbulk.com">info@okbulk.com</a>
-        </div>
-        <div>
-          <a href="tel:+971501900741">+971501900741</a>
-        </div>
-      </div>
-
-      <!-- Address -->
-      <div class="col-lg-6">
-        <p class="footer-header mt-5">Address</p>
-        <div>Office No.301 - Api World Tower - Sheikh Zayed Rd - Trade Centre - Trade Centre 1 - Dubai - United Arab Emirates</div>
-      </div>
-
-      <!-- Copyright -->
-      <div class="col-lg-12 mt-5 text-secondary">2022 &copy; Okbulk Shipping L.L.C</div>
     </div>
   </div>
-</div>
+</section>
+
+<!-- Header -->
+<section id="header">
+  <div class="inner">
+
+    <!-- Brand -->
+    <a class="header-brand" href="index.html">
+      <img alt="Logo" class="header-logo" src="asset/img/logo-title.png">
+      <div class="header-title-slogan">
+        <div class="header-title">Okbulk</div>
+        <div class="header-slogan">Anytime, Anywhere</div>
+      </div>
+    </a>
+
+    <!-- Separator -->
+    <span class="mx-auto"></span>
+
+    <!-- Contact Us -->
+    <a class="btn btn-primary rounded-pill px-3" href="#contact">Contact Us</a>
+  </div>
+</section>
+
+<!-- Identity -->
+<section id="identity" data-bs-theme="dark">
+  <div class="inner">
+
+    <!-- About -->
+    <div class="row g-4">
+
+      <!-- Left -->
+      <div class="col-12 col-md-6">
+        <div class="col-inner">
+          <div class="fw-bold display-3">About Us</div>
+          <p class="section-subtitle text-muted mt-4">
+            We are a trusted shipping company in Dubai, UAE, specializing in reliable cargo movement across the region.
+            <br>
+            As a professional UAE shipping agent, we support international vessels and handle all logistics with
+            accuracy and care.
+            <br>
+            Our expertise includes car exporting from Dubai and shipping various materials to neighboring countries.
+            <br>
+            From documentation to secure delivery, we ensure a smooth and efficient shipping process.
+            <br>
+            Dedicated to reliability and customer satisfaction, we continue to be a preferred choice for regional
+            shipping and logistics services.
+          </p>
+        </div>
+      </div>
+
+      <!-- Right -->
+      <div class="col-12 col-md-6">
+        <div class="col-inner">
+          <img src="asset/img/ship.jpg" alt="about-us">
+        </div>
+      </div>
+    </div>
+
+    <!-- Shop now -->
+    <!--    <div class="row flex-column-reverse flex-md-row g-4">-->
+
+    <!--      &lt;!&ndash; Left &ndash;&gt;-->
+    <!--      <div class="col-12 col-md-6">-->
+    <!--        <div class="col-inner">-->
+    <!--          <img src="asset/img/ship.jpg" alt="shop">-->
+    <!--        </div>-->
+    <!--      </div>-->
+
+    <!--      &lt;!&ndash; Right &ndash;&gt;-->
+    <!--      <div class="col-12 col-md-6">-->
+    <!--        <div class="col-inner">-->
+    <!--          <div class="fw-bold display-3">Shop Now</div>-->
+    <!--          <p class="section-subtitle text-muted mt-4">-->
+    <!--            Easily connect with us for all your industrial and construction material needs.-->
+    <!--            Share your inquiries, and our team will provide expert assistance and tailored solutions.-->
+    <!--            Experience quality and service you can trust!-->
+    <!--          </p>-->
+    <!--          <div>-->
+    <!--            <a href="https://forms.gle/BjpDQYVkw16R2P9v7"-->
+    <!--               target="_blank"-->
+    <!--               class="btn btn-light px-5 btn-lg rounded-pill">-->
+    <!--              Inquiry-->
+    <!--            </a>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </div>-->
+  </div>
+</section>
+
+<!-- Team -->
+<section id="team" data-bs-theme="dark">
+
+  <!-- Wave -->
+  <img src="asset/img/wave-dark.svg" alt="Wave" class="wave wave-flip">
+
+  <div class="inner">
+    <div class="fw-bold display-3 text-center mb-5 text-white">Meet our Team</div>
+    <div class="row justify-content-center g-4">
+
+      <!-- Esmaeil Ansari -->
+      <div class="col-12 col-md-4">
+        <div class="person">
+          <div class="name">Esmaeil Ansari</div>
+          <div class="profession">Manager</div>
+          <div class="icons">
+            <a href="tel:+971501900741" class="icon phone">
+              <img src="asset/icons/phone.svg" alt="Phone">
+            </a>
+            <a href="mailto:esmail.ansari22@yahoo.com" class="icon email">
+              <img src="asset/icons/email.svg" alt="Email">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Irfan Rashid -->
+      <div class="col-12 col-md-4">
+        <div class="person">
+          <div class="name">Irfan Rashid</div>
+          <div class="profession">Technical And Commercial Sales Representative</div>
+          <div class="icons">
+
+            <a href="tel:+971589005491" class="icon phone">
+              <img src="asset/icons/phone.svg" alt="Phone">
+            </a>
+            <!--            <a href="mailto:info@okbulk.biz" class="icon email">-->
+            <!--              <img src="asset/icons/email.svg" alt="Email">-->
+            <!--            </a>-->
+          </div>
+        </div>
+      </div>
+
+      <!-- Kaleem Allah -->
+      <div class="col-12 col-md-4">
+        <div class="person">
+          <div class="name">Kaleem Allah</div>
+          <div class="profession">Warehouse Receiver</div>
+          <div class="icons">
+            <a href="tel:+971563667810" class="icon phone">
+              <img src="asset/icons/phone.svg" alt="Phone">
+            </a>
+            <div class="ms-1">Port Rashid, Parking no 23</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Wave -->
+  <img src="asset/img/wave.svg" alt="Wave" class="wave">
+</section>
+
+<!-- Contact -->
+<section id="contact">
+  <div class="inner">
+    <div class="row justify-content-between g-4">
+
+      <!-- Left -->
+      <div class="col-lg-6">
+
+        <!-- Title -->
+        <div class="fw-bold display-3">Get In Touch</div>
+
+        <!-- Subtitle -->
+        <p class="section-subtitle">
+          We'd love hear from you! Whether you have questions, need support, or want to learn more about our service,
+          our team is here to help.
+        </p>
+
+        <!-- Contacts -->
+        <div class="contact-items">
+          <div class="d-flex flex-wrap justify-content-center gap-4">
+
+            <!-- Primary phone -->
+            <a class="contact-item contact-item-phone"
+               href="tel:+971043432365"
+               target="_blank">
+              <div class="icon">
+                <img src="asset/icons/phone.svg" alt="Phone">
+              </div>
+              <span>04 343 2365</span>
+            </a>
+
+            <!-- WhatsApp -->
+            <a class="contact-item contact-item-whatsapp"
+               href="https://wa.me/+971501900741"
+               target="_blank">
+              <div class="icon">
+                <img src="asset/icons/whatsapp.svg" alt="WhatsApp">
+              </div>
+              <span>WhatsApp</span>
+            </a>
+
+            <!-- Email -->
+            <a class="contact-item contact-item-email"
+               href="mailto:info@okbulk.com"
+               target="_blank">
+              <div class="icon">
+                <img src="asset/icons/email.svg" alt="Email">
+              </div>
+              <span>Email</span>
+            </a>
+
+            <!-- Instagram -->
+            <a class="contact-item contact-item-email"
+               href="https://instagram.com/okbulkshipping/"
+               target="_blank">
+              <div class="icon">
+                <img src="asset/icons/instagram.svg" alt="Email">
+              </div>
+              <span>Instagram</span>
+            </a>
+
+            <!-- Location -->
+            <a class="contact-item contact-item-location"
+               href="https://maps.app.goo.gl/5ZEhJyUbquJe8ATQA"
+               target="_blank">
+              <div class="icon">
+                <img src="asset/icons/location.svg" alt="Location">
+              </div>
+              <span>Location</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right -->
+      <div class="col-lg-6">
+
+        <!-- Map -->
+        <div class="contact-map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d115376.05384942748!2d55.3261589!3d25.3544975!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5d957c93f761%3A0xa1a3539d707893a1!2sAl%20Gurg%20Tower-3%2C%20Office%20Tower!5e0!3m2!1sen!2sae!4v1764104839873!5m2!1sen!2sae"
+            allowfullscreen
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+
+        <!-- Address -->
+        <p><a href="#" class="link-secondary">
+          United Arab Emirates, Dubai - Riggat Al Buteen - 4D Street - Al Gurg Tower 3 - Office No.45 - P.O.BOX 116735
+        </a></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<section id="footer">
+  <div class="inner">
+    <footer>
+      <div class="footer-text">OkBulk © 1985-present</div>
+      <a class="footer-designer" href="https://amerpire.com">Designed by Amerpire</a>
+    </footer>
+  </div>
+</section>
 </body>
+</html>
