--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
     <div class="row justify-content-center g-4">
 
       <!-- Esmaeil Ansari -->
-      <div class="col-12 col-md-4">
+      <div class="col-12 col-md-3">
         <div class="person">
           <div class="name">Esmaeil Ansari</div>
           <div class="profession">Manager</div>
@@ -159,24 +159,36 @@
       </div>
 
       <!-- Irfan Rashid -->
-      <div class="col-12 col-md-4">
+      <div class="col-12 col-md-3">
         <div class="person">
           <div class="name">Irfan Rashid</div>
           <div class="profession">Technical And Commercial Sales Representative</div>
           <div class="icons">
-
             <a href="tel:+971589005491" class="icon phone">
               <img src="asset/icons/phone.svg" alt="Phone">
             </a>
-            <!--            <a href="mailto:info@okbulk.biz" class="icon email">-->
-            <!--              <img src="asset/icons/email.svg" alt="Email">-->
-            <!--            </a>-->
+            <a href="mailto:irfanrashidbaloch@gmail.com" class="icon email">
+              <img src="asset/icons/email.svg" alt="Email">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Edelmira Acosta Belaya -->
+      <div class="col-12 col-md-3">
+        <div class="person">
+          <div class="name">Edelmira Acosta Belaya</div>
+          <div class="profession">Follow Up Clerk</div>
+          <div class="icons">
+            <a href="tel:+971506011059" class="icon phone">
+              <img src="asset/icons/phone.svg" alt="Phone">
+            </a>
           </div>
         </div>
       </div>
 
       <!-- Kaleem Allah -->
-      <div class="col-12 col-md-4">
+      <div class="col-12 col-md-3">
         <div class="person">
           <div class="name">Kaleem Allah</div>
           <div class="profession">Warehouse Receiver</div>
