FAQ & other UI/UX improvements

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,6 @@
     <!-- Brand -->
     <a class="header-brand" href="index.html">
       <img alt="Logo" class="header-logo" src="asset/img/logo-title.png">
-      <div class="header-title-slogan">
-        <div class="header-title">Okbulk</div>
-        <div class="header-slogan">Anytime, Anywhere</div>
-      </div>
     </a>
 
     <!-- Separator -->
@@ -95,7 +91,7 @@
       <!-- Right -->
       <div class="col-12 col-md-6">
         <div class="col-inner">
-          <img src="asset/img/ship.jpg" alt="about-us">
+          <img src="asset/img/ship-3.jpg" alt="about-us">
         </div>
       </div>
     </div>
@@ -207,6 +203,83 @@
   <img src="asset/img/wave.svg" alt="Wave" class="wave">
 </section>
 
+<!-- FAQ -->
+<section id="faq">
+  <div class="inner">
+    <div class="row justify-content-between g-4">
+
+      <!-- Left -->
+      <div class="col-lg-6">
+
+        <!-- Title -->
+        <div class="fw-bold display-3">Frequently Asked Questions</div>
+
+        <!-- Subtitle -->
+        <p class="section-subtitle text-muted mt-2">
+          Quick answers to help you understand how we take care of your concerns.
+        </p>
+      </div>
+
+      <!-- Right -->
+      <div class="col-lg-6">
+
+        <div class="accordion">
+          <div class="item">
+            <input type="checkbox" id="item1" checked>
+            <label for="item1" class="header">What documents are required for international shipping?</label>
+            <div class="body">
+              The documents you need for international shipping depend on the destination and the type of goods being shipped.
+              <br>
+              Commonly required documents include <b>commercial invoices</b>, <b>certificates of origin</b>, <b>packing lists</b>, and <b>import/export permits</b>.
+              <br>
+              As a trusted shipping company in Dubai, we guide you through the process to ensure compliance with all requirements.
+              <br>
+              For personalised assistance, call us at
+              <a href="tel:+971043432365" target="_blank">04 343 2365</a>
+            </div>
+          </div>
+          <div class="item">
+            <input type="checkbox" id="item2">
+            <label for="item2" class="header">Do you offer insurance for my shipment?</label>
+            <div class="body">
+              Yes, we offer insurance to safeguard your goods during transit.
+              <br>
+              We prioritise the safety of your shipments and provide detailed information about our insurance policies when you place an order.
+              <br>
+              This extra layer of protection ensures peace of mind for both personal and commercial shipments.
+            </div>
+          </div>
+          <div class="item">
+            <input type="checkbox" id="item3">
+            <label for="item3" class="header">How is shipping cost calculated?</label>
+            <div class="body">
+              Shipping costs depend on a lot of factors, including <b>legal frameworks</b>, <b>size</b>, <b>weight</b>, <b>destination</b>, and chosen <b>shipping method</b>.
+              <br>
+              For international shipping, additional considerations such as customs requirements may apply.
+              <br>
+              Contact us at <a href="tel:+971043432365" target="_blank">04 343 2365</a>
+            </div>
+          </div>
+          <div class="item">
+            <input type="checkbox" id="item4">
+            <label for="item4" class="header">How can I track my shipment?</label>
+            <div class="body">
+              Tracking your shipment is easy with our online portal.
+              <br>
+              Simply enter your tracking number to get real-time updates on your package’s journey.
+              <br>
+              Whether it’s local delivery or international shipping, we keep you informed every step of the way.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Separator -->
+<hr class="container w-25 my-5">
+
 <!-- Contact -->
 <section id="contact">
   <div class="inner">
@@ -219,65 +292,52 @@
         <div class="fw-bold display-3">Get In Touch</div>
 
         <!-- Subtitle -->
-        <p class="section-subtitle">
-          We'd love hear from you! Whether you have questions, need support, or want to learn more about our service,
-          our team is here to help.
+        <p class="section-subtitle text-muted mt-2">
+          We’d love to hear from you! Whether you have questions, need assistance, or want to learn more about our services, our team is ready to help.
         </p>
 
         <!-- Contacts -->
-        <div class="contact-items">
-          <div class="d-flex flex-wrap justify-content-center gap-4">
+        <div class="list-group mt-5">
 
-            <!-- Primary phone -->
-            <a class="contact-item contact-item-phone"
-               href="tel:+971043432365"
-               target="_blank">
-              <div class="icon">
-                <img src="asset/icons/phone.svg" alt="Phone">
-              </div>
-              <span>04 343 2365</span>
-            </a>
+          <!-- Phone -->
+          <a class="list-group-item list-group-item-action gap-3 d-flex align-items-center p-3"
+             href="tel:+971043432365"
+             target="_blank">
+            <img src="asset/icons/phone.svg" alt="Phone">
+            <span>04 343 2365</span>
+          </a>
 
-            <!-- WhatsApp -->
-            <a class="contact-item contact-item-whatsapp"
-               href="https://wa.me/+971501900741"
-               target="_blank">
-              <div class="icon">
-                <img src="asset/icons/whatsapp.svg" alt="WhatsApp">
-              </div>
-              <span>WhatsApp</span>
-            </a>
+          <!-- Email -->
+          <a class="list-group-item list-group-item-action gap-3 d-flex align-items-center p-3"
+             href="mailto:info@okbulk.com"
+             target="_blank">
+            <img src="asset/icons/email.svg" alt="Email">
+            <span>Email</span>
+          </a>
 
-            <!-- Email -->
-            <a class="contact-item contact-item-email"
-               href="mailto:info@okbulk.com"
-               target="_blank">
-              <div class="icon">
-                <img src="asset/icons/email.svg" alt="Email">
-              </div>
-              <span>Email</span>
-            </a>
+          <!-- Location -->
+          <a class="list-group-item list-group-item-action gap-3 d-flex align-items-center p-3"
+             href="https://maps.app.goo.gl/5ZEhJyUbquJe8ATQA"
+             target="_blank">
+            <img src="asset/icons/location.svg" alt="Location">
+            <span>Location</span>
+          </a>
 
-            <!-- Instagram -->
-            <a class="contact-item contact-item-email"
-               href="https://instagram.com/okbulkshipping/"
-               target="_blank">
-              <div class="icon">
-                <img src="asset/icons/instagram.svg" alt="Email">
-              </div>
-              <span>Instagram</span>
-            </a>
+          <!-- WhatsApp -->
+          <a class="list-group-item list-group-item-action gap-3 d-flex align-items-center p-3"
+             href="https://wa.me/+971501900741"
+             target="_blank">
+            <img src="asset/icons/whatsapp.svg" alt="WhatsApp">
+            <span>WhatsApp</span>
+          </a>
 
-            <!-- Location -->
-            <a class="contact-item contact-item-location"
-               href="https://maps.app.goo.gl/5ZEhJyUbquJe8ATQA"
-               target="_blank">
-              <div class="icon">
-                <img src="asset/icons/location.svg" alt="Location">
-              </div>
-              <span>Location</span>
-            </a>
-          </div>
+          <!-- Instagram -->
+          <a class="list-group-item list-group-item-action gap-3 d-flex align-items-center p-3"
+             href="https://instagram.com/okbulkshipping/"
+             target="_blank">
+            <img src="asset/icons/instagram.svg" alt="Email">
+            <span>Instagram</span>
+          </a>
         </div>
       </div>
 
